# Computer-architecture-projects

ap blok 1/: Blok1MyrkaYaroslav.c  CMakeLists.txt  program  ul1  ul1.c  ul2  ul2.c  ul4  ul4.c  ul5  ul5.c
ap blok 2/: blok2.c
ap blok 2/ul2.1.3/: CMakeLists.txt  main.c
ap blok 2/ul2.2/: CMakeLists.txt  main.c
ap blok 2/ul2.3.1/: CMakeLists.txt  main.c  poviedkaWIN1250.html
ap blok 2/ul2.3.2/: CMakeLists.txt  main.c
ap blok 2/ul2.4/: CMakeLists.txt  main.c
ap blok 3/: main.c
